@@ -12,6 +12,18 @@ plugins {
     id 'com.gradle.plugin-publish' version "1.1.0"
 }
 
+sourceCompatibility = 11
+targetCompatibility = 11
+
+tasks.withType(Javadoc) {
+    options.encoding = 'UTF-8'
+}
+
+
+compileJava {
+    options.encoding = 'UTF-8'
+}
+
 // Configure the plugin portal URL
 // gradlePluginPortal {
 //     credentials {
@@ -27,6 +39,18 @@ repositories {
     google()
 }
 
+
+jar {
+    archiveBaseName = "gradle-semantic-versioning-manager-plugin"
+    from("$rootProject.projectDir/gradle-plugins") {
+        into "META-INF/gradle-plugins"
+    }
+}
+
+
+tasks.withType(Test).configureEach {
+    it.jvmArgs = ["--add-opens=java.base/java.lang=ALL-UNNAMED"]
+}
 
 dependencies {
 
